tests/v05-vertical-slice/reject/lambda_arrow_operator.hew
// Reject fixture: E_OPERATOR_REMOVED
// The `<-` send operator was removed in v0.5.
// Expected: parse error containing "E_OPERATOR_REMOVED"
// Use `actor |params| { body }` and call-syntax `handle(msg)` instead.
fn main() {
    let printer = actor |x: int| {
        println(x);
    };
    printer <- 42;
}
